[tool.poetry]
name = "Catalyst"
version = "21.10"
description = "Catalyst"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"

[tool.nitpick]
style = "https://raw.githubusercontent.com/catalyst-team/codestyle/v21.09.2/styles/nitpick-style-catalyst.toml"

[tool.black]
line-length = 99

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
numpy = ">=1.18"
torch = ">=1.3.0"

# dev dependencies
mock = {version="3.0.5", optional=true}
catalyst-codestyle = {version="21.09.2", optional=true}
black = {version="21.8b0", optional=true}
catalyst-sphinx-theme = {version="1.1.2", optional=true}
tomlkit = {version="0.7.2", optional=true}
pre-commit = {version="2.13.0", optional=true}

[tool.poetry.extras]
dev = ["mock", "catalyst-codestyle", "black", "catalyst-sphinx-theme","tomlkit","pre-commit"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
